(example) Inject more punctuation

--- a/example/index.html
+++ b/example/index.html
@@ -12,10 +12,10 @@
       Tortor condimentum lacinia quis vel eros donec ac odio tempor orci dapibus ultrices in iaculis nunc. Enim, sit amet venenatis urna cursus eget nunc scelerisque viverra mauris, in aliquam sem.
     </p>
     <p>
-      Vitae elementum curabitur vitae nunc sed velit dignissim sodales ut eu sem integer vitae justo eget magna. Viverra nam libero justo, laoreet sit amet cursus sit amet, dictum sit amet!
+      Vitae elementum curabitur vitae nunc "sed" velit dignissim sodales ut eu sem integer vitae justo eget magna. Viverra nam libero justo, laoreet sit&amp;amet cursus sit amet, dictum sit amet!
     </p>
     <p>
-      Auctor urna nunc id cursus metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis! Egestas erat imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor leo a?
+      Auctor urna nunc id cursus metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis! Egestas erat imperdiet "sed" euismod nisi 'porta' lorem mollis aliquam ut porttitor leo a?
     </p>
     <script src="bundle.js"></script>
   </body>
