--- a/example/index.html
+++ b/example/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>range-lookup demo</title>
   </head>
-  <body>
-    <input type="text" placeholder="string to search for"/>
+  <body style="margin: 20px 20% 20%">
+    <input type="text" placeholder="string to search for" style="width: 100%"/>
     <p>
       Habitant morbi tristique senectus et? Proin fermentum leo vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur libero, id faucibus nisl tincidunt eget nullam non nisi est, sit amet.
     </p>
